--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "@example/basics",
+  "name": "nothing",
+  "type": "module",
   "version": "0.0.1",
-  "private": true,
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview"
+    "preview": "astro preview",
+    "astro": "astro"
   },
-  "devDependencies": {
-    "astro": "^1.9.2",
-    "prettier-plugin-astro": "^0.12.0"
+  "dependencies": {
+    "astro": "^4.6.3"
   }
 }
