--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/node": "^8.3.3",
+    "@astrojs/sitemap": "^3.1.6",
     "astro": "^4.15.1",
     "sass": "^1.75.0"
   }
