--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/node": "^8.3.3",
     "@astrojs/sitemap": "^3.1.6",
     "astro": "^4.15.1",
+    "fs-extra": "^11.2.0",
     "sass": "^1.75.0"
   }
 }
