--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@astrojs/node": "^8.3.3",
     "@astrojs/sitemap": "^3.1.6",
-    "astro": "^4.15.1",
+    "astro": "^4.16.13",
+    "chalk": "^5.3.0",
     "fs-extra": "^11.2.0",
     "sass": "^1.75.0"
   }
