--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "astro": "^4.16.13",
     "chalk": "^5.3.0",
     "fs-extra": "^11.2.0",
-    "sass": "^1.75.0"
+    "sass": "^1.75.0",
+    "signal-exit": "^4.1.0"
   }
 }
