--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chalk": "^5.3.0",
     "fs-extra": "^11.2.0",
     "sass": "^1.75.0",
-    "signal-exit": "^4.1.0"
+    "signal-exit": "^4.1.0",
+    "to-fast-properties": "^4.0.0"
   }
 }
