damn edits - make and locally test large-scale changes to the photos page grid thingies

--- a/.hintrc
+++ b/.hintrc
@@ -14,7 +14,8 @@
           "user-select",
           "-webkit-rtl-ordering",
           "text-align-last",
-          "font-size-adjust"
+          "font-size-adjust",
+          "overflow: clip"
         ]
       }
     ]
