--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/node": "^8.3.3",
+    "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.1.6",
     "astro": "^4.16.13",
     "chalk": "^5.3.0",
