--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
-  "name": "adarshrkumar.dev",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/node": "^8.3.3",
-    "@astrojs/rss": "^4.0.11",
-    "@astrojs/sitemap": "^3.1.6",
-    "astro": "^4.16.13",
-    "chalk": "^5.3.0",
-    "fs-extra": "^11.2.0",
-    "sass": "^1.75.0",
-    "signal-exit": "^4.1.0",
-    "to-fast-properties": "^4.0.0"
-  }
+    "name": "adarshrkumar.dev",
+    "type": "module",
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "astro dev",
+        "start": "astro dev",
+        "build": "astro build",
+        "preview": "astro preview",
+        "astro": "astro"
+    },
+    "dependencies": {
+        "@astrojs/node": "^8.3.3",
+        "@astrojs/rss": "^4.0.11",
+        "@astrojs/sitemap": "^3.1.6",
+        "astro": "^4.16.13",
+        "chalk": "^5.6.2",
+        "fs-extra": "^11.3.1",
+        "sass": "^1.75.0",
+        "signal-exit": "^4.1.0",
+        "to-fast-properties": "^4.0.0"
+    },
+    "devDependencies": {
+        "@types/fs-extra": "^11.0.4"
+    }
 }
