--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
         "@astrojs/node": "^8.3.3",
         "@astrojs/rss": "^4.0.11",
         "@astrojs/sitemap": "^3.1.6",
-        "astro": "^4.16.13",
+        "astro": "^4.16.19",
         "chalk": "^5.6.2",
         "fs-extra": "^11.3.1",
         "sass": "^1.75.0",
         "signal-exit": "^4.1.0",
-        "to-fast-properties": "^4.0.0"
+        "to-fast-properties": "^4.0.0",
+        "vite": "^7.1.7"
     },
     "devDependencies": {
         "@types/fs-extra": "^11.0.4"
