--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
         "astro": "astro"
     },
     "dependencies": {
-        "@astrojs/node": "^8.3.3",
-        "@astrojs/rss": "^4.0.11",
-        "@astrojs/sitemap": "^3.1.6",
-        "astro": "^4.16.19",
+        "@astrojs/node": "^9.4.4",
+        "@astrojs/rss": "^4.0.12",
+        "@astrojs/sitemap": "^3.6.0",
+        "astro": "^5.14.1",
         "chalk": "^5.6.2",
         "fs-extra": "^11.3.1",
+        "html-escaper": "^3.0.3",
         "sass": "^1.75.0",
         "signal-exit": "^4.1.0",
         "to-fast-properties": "^4.0.0",
-        "vite": "^7.1.7"
+        "vite": "^7.1.7",
+        "yargs-parser": "^22.0.0"
     },
     "devDependencies": {
         "@types/fs-extra": "^11.0.4"
