--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "chalk": "^5.6.2",
         "fs-extra": "^11.3.1",
         "html-escaper": "^3.0.3",
+        "nanoid": "^5.1.6",
         "sass": "^1.75.0",
         "signal-exit": "^4.1.0",
         "to-fast-properties": "^4.0.0",
