--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
         "astro": "astro"
     },
     "dependencies": {
-        "@astrojs/node": "^9.4.4",
-        "@astrojs/rss": "^4.0.12",
+        "@astrojs/node": "^9.5.0",
+        "@astrojs/rss": "^4.0.13",
         "@astrojs/sitemap": "^3.6.0",
-        "astro": "^5.14.1",
+        "@astrojs/vercel": "^9.0.0",
+        "astro": "^5.15.1",
         "chalk": "^5.6.2",
         "fs-extra": "^11.3.1",
         "html-escaper": "^3.0.3",
